<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/newGame"
        android:tag="NewGame"
        android:text="@string/new_game"
        android:onClick="onNewGame"

        android:layout_height="wrap_content"
        android:layout_width="wrap_content"

        android:background="#ffffff"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@+id/activity_main"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"

        android:text="@string/spaceValue"
        android:id="@+id/turnDisplay"

        app:layout_constraintTop_toTopOf="@+id/activity_main"
        android:layout_marginTop="32dp"
        app:layout_constraintRight_toRightOf="@+id/activity_main"
        android:layout_marginRight="32dp"
        android:layout_marginEnd="32dp"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"

        android:text="@string/current_turn"
        android:id="@+id/turnMarker"

        app:layout_constraintTop_toTopOf="@+id/activity_main"
        android:layout_marginTop="32dp"
        app:layout_constraintRight_toLeftOf="@+id/turnDisplay"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text=""
        android:id="@+id/Winner"
        android:visibility="invisible"

        app:layout_constraintTop_toBottomOf="@+id/board"
        android:layout_marginTop="32dp"
        app:layout_constraintRight_toLeftOf="@+id/activity_main"
        app:layout_constraintLeft_toRightOf="@+id/activity_main"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/board"

        app:layout_constraintLeft_toLeftOf="@+id/activity_main"
        app:layout_constraintTop_toTopOf="@+id/activity_main"
        app:layout_constraintRight_toRightOf="@+id/activity_main"
        app:layout_constraintBottom_toBottomOf="@+id/activity_main"

        android:columnCount="3"
        android:rowOrderPreserved="true"
        android:rowCount="3"
        android:columnOrderPreserved="true"
        android:orientation="horizontal">

        <Button
            android:tag="button00"
            android:onClick="tileOnClick"
            android:layout_gravity="top|start"
            android:text="@string/spaceValue"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"/>
        <Button
            android:tag="button01"
            android:onClick="tileOnClick"
            android:layout_gravity="top|start"
            android:text="@string/spaceValue"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"/>
        <Button
            android:tag="button02"
            android:onClick="tileOnClick"
            android:layout_gravity="top|start"
            android:text="@string/spaceValue"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"/>

        <Button
            android:tag="button10"
            android:onClick="tileOnClick"
            android:layout_gravity="top|start"
            android:text="@string/spaceValue"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"/>
        <Button
            android:tag="button11"
            android:onClick="tileOnClick"
            android:layout_gravity="top|start"
            android:text="@string/spaceValue"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"/>
        <Button
            android:tag="button12"
            android:onClick="tileOnClick"
            android:layout_gravity="top|start"
            android:text="@string/spaceValue"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"/>

        <Button
            android:tag="button20"
            android:onClick="tileOnClick"
            android:layout_gravity="top|start"
            android:text="@string/spaceValue"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"/>
        <Button
            android:tag="button21"
            android:onClick="tileOnClick"
            android:layout_gravity="top|start"
            android:text="@string/spaceValue"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"/>
        <Button
            android:tag="button22"
            android:onClick="tileOnClick"
            android:layout_gravity="top|start"
            android:text="@string/spaceValue"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"/>

    </GridLayout>

</android.support.constraint.ConstraintLayout>